--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -43,11 +43,8 @@ a{
     margin-top: 10px;
 }
 .h1-index{    
-    width: 30%;
+    width: 70%;
     margin-top: 30px;
-    margin-right: 6%;
-    float: right;
-    clear: both;
     text-align: right;
     color: red;
     font-family: 'Squada One', cursive;
@@ -59,8 +56,8 @@ a{
     height: 50px;
     width: 150px;
     margin: auto;    
-    margin-right: 6%;
-    /*margin-top: 20px;*/
+    margin-right: 20%;
+    margin-top: 20px;
     margin-bottom: 0;
     border-radius: 10px;
     background-color: #FF6B6B;
@@ -159,7 +156,7 @@ label{
 }
 
 .inicio-sesion{
-    background-color: blue;
+    background-color:#3431B4;
 }
 
 .comenzar{
@@ -168,30 +165,17 @@ label{
     margin: auto;
 }
 
-.tit-plan{
-    color: blue;
-    text-align: center;
-    width: 100%;
-}
-
-.tit2-plan{
-    color: red;
-    text-align: center;
-    width: 100%;
-}
-
 .tit-registro{
     color: blue;
     text-align: center;
     width: 100%;
 }
 
-.p-plan{
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 0;
-    width: 50%;
+.tit-plan{
+    color: blue;
     text-align: center;
+    margin-top: 2%;
+    width: 100%;
 }
 
 .planes{
@@ -199,53 +183,48 @@ label{
     width: 100%;
     display: flex;
     flex-direction: row;
-}
-
-.plan{
-    width: 100%;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    text-align: center;
+    justify-content: center;
 }
 
 .plan1{
+    width: 200px;    
+    height: 450px;
     background-image: url(../images/plan_free.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .plan2{
+    width: 200px;    
+    height: 450px;
     background-image: url(../images/plan_individual.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .plan3{
+    width: 200px;    
+    height: 450px;
     background-image: url(../images/plan_duo.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .plan4{
+    width: 200px;    
+    height: 450px;
     background-image: url(../images/plan_familiar.jpg);
-
+    background-repeat: no-repeat;
+    background-size: contain;
 }
-
-.h-planes{
-    font-size: 30px;
-    margin-top: 20px;
-}
-
-.p-planes{
-    margin: auto;
-    width: 50%;
-    font-size: 20px;
-    margin-top: 20px;
-}
-
-.precio{
-    
-    bottom: 0;
+.btn-plan{
+    display: inline-flex;
+    flex-direction: row;
 }
 /*-------------------------------------*/
 .navegation{
     display: flex;
     flex-direction: row;
+    margin-bottom: 2%;
     height: 100px;
     width: 100%;
     background-color: black;
@@ -268,12 +247,10 @@ label{
 .container-links{
     margin-top: auto;
     margin-bottom: auto;
-    width: 45%;
     display:inline-block;
     flex-direction: row;
     text-align: right;
-    margin-top: 40px;
-    margin-left: 30px;
+    margin-right:4%;
     height: 50px;
     width: 50%;
 }
@@ -704,12 +681,6 @@ margin-right: auto;
 }
 
 /*----------FOOTER-----------*/
-footer{
-    width: 100%;
-    bottom: 0;
-    position: absolute;
-}
-
 .contact{
     position: absolute;
     bottom: 0;
@@ -719,7 +690,6 @@ footer{
     height: 70px;
     background-color: #4f4f4f;
 }
-
 .social-media{
     margin-top: 4px;
     width: 335px;
