--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -416,7 +416,7 @@ label{
     background-repeat: no-repeat;
     position: fixed;
     left:0;
-    top:85%;
+    bottom: 0;
     padding:20px 20px;
 }
 /*-----------------reproduccion de cancion--------------------------*/
@@ -424,6 +424,11 @@ label{
     width: 25%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.espacio-blanco{
+    height: 110px;
+    width: 100%;
 }
 
 .song-info{
