--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -593,17 +593,18 @@ margin-right: auto;
 /* MI CUENTA ---------------------------------------*/
 
 #btn-modificar-datos {
-    width: 290px;
+    min-width: 180px;
     height: 40px;
     background-color: blue !important;
     color: rgb(255, 255, 255) !important;
     border-radius: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-left: 10px;
 }
 
 #btn-descartar-datos {
-    width: 290px;
+    min-width: 180px;
     height: 40px;
     background-color: rgb(255, 255, 255) !important;
     color: rgb(105, 102, 102) !important;
@@ -611,10 +612,11 @@ margin-right: auto;
     border-radius: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-right: 10px;
 }
 
 #btn-act-plan {
-    width: 190px;
+    min-width: 180px;
     height: 40px;
     background-color: rgb(255, 94, 0) !important;
     color: rgb(255, 255, 255) !important;
@@ -651,6 +653,8 @@ margin-right: auto;
 #text-comentario {
     border: 1px solid grey;
     width: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #lista-comentarios {
@@ -665,7 +669,7 @@ margin-right: auto;
     margin-top: 5px;
     padding: 5px;
     background-color: rgb(245, 240, 240);
-    width: 74%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -674,13 +678,46 @@ margin-right: auto;
     margin-top: 5px;
     padding: 5px;
     background-color: rgb(245, 240, 240);
-    width: 74%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     font-weight: bolder;
 }
 
+#actualiza {
+    font-weight: bolder;
+}
+
+
+/*----------NOTIFICACIONES-----------*/
+
+#actualizar-plan-notific {
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+
+/*----------ACTUALIZAR PLAN----------*/
+
+#actualizar-plan {
+    width: 80%;
+    margin-left: auto;
+    margin-left: auto;
+}
+
+.un-plan {
+    margin: 8px;
+    margin-top: 20px;
+}
+
+.un-plan a {
+    color: white;
+}
+
 /*----------FOOTER-----------*/
+
 .contact{
     position: absolute;
     bottom: 0;
