Corrección de errores en Ayuda

--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -545,6 +545,13 @@ label{
     margin-right: auto;
 }
 
+#linea-buscar-header {
+    width: 80%;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #buscar {
     border: solid 1px;
     width: 250px;
