--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -536,6 +536,64 @@ label{
     background-image: url(../images/like.png);
 }
 
+#form {
+    width: 160px;
+    margin: 0 auto;
+    margin-left: 0;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  #form p {
+    text-align: center;
+  }
+  
+  #form label {
+    font-size: 40px;
+  }
+  
+  input[type="radio"] {
+    display: none;
+  }
+  
+  label {
+    color: grey;
+  }
+  
+  .clasificacion {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+  
+  label:hover,
+  label:hover ~ label {
+    color: orange;
+  }
+  
+  input[type="radio"]:checked ~ label {
+    color: orange;
+    animation-name: example;
+    animation-duration: 0.8s;
+    animation-iteration-count: 1;
+    transition: ease-in-out;
+  }
+
+  @keyframes example {
+    0% {
+        /* font-size: 40px; */
+        font-size: 40px;
+    }
+    50% {
+        /* font-size: 50px; */
+        font-size: 44px;
+    }
+    100%{
+        /* font-size: 40px; */
+        font-size: 40px;
+    }
+  }
+
 /* AYUDA - acordeon ----------------------------------*/
 
 #linea-buscar {
