--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -6,6 +6,13 @@
 }
 ::-webkit-scrollbar {display: none;}
 
+.span{
+    margin-top: 13px;
+    margin-left: 5px;
+    text-align: center;
+    color: #4f4f4f;
+    font-family: 'Roboto', sans-serif; 
+}
 a{
     text-decoration: none;
     color: #4f4f4f;
@@ -421,6 +428,7 @@ label{
 .player{
     height: 55px;
     width: 100%;
+    text-align: center;
     /*border: 2px solid black;*/
     background-position: center;
     margin-left: auto;
@@ -435,11 +443,26 @@ label{
 }
 /*-----------------reproduccion de cancion--------------------------*/
 .cancion{
-    width: 25%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    text-align: center;
+    
+}
+.content{
+    width: 100%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.artista{
+    width: 100%;
+    display:inline-flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.barra{
+    width: 70%;
 }
 
+/*----*/
 .espacio-blanco{
     height: 110px;
     width: 100%;
@@ -539,7 +562,7 @@ label{
 #form {
     width: 160px;
     margin: 0 auto;
-    margin-left: 0;
+    margin-left: auto;/*centre las estrellas*/
     height: 50px;
     display: flex;
     flex-direction: row;
