--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -13,6 +13,10 @@
     color: #4f4f4f;
     font-family: 'Roboto', sans-serif; 
 }
+.margen{
+    margin-left: 10%;
+    margin-right: 4%;
+}
 a{
     text-decoration: none;
     color: #4f4f4f;
@@ -312,12 +316,18 @@ label{
 .lupa{
     margin-top: 37px;
     background-image: url(../images/lupa.png);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     height: 25px;
     width: 25px;
     margin-right: 20px;
     margin-left: 10px;
+}
+#notificacion{
+    width:20px; height:20px;
+    background-image: url(../images/icono_notificaciones.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 /*----------MUSICA-----------*/
@@ -433,7 +443,7 @@ label{
     background-position: center;
     margin-left: auto;
     margin-right: auto;
-    background-image: url(../images/player.png);
+    /*background-image: url(../images/player.png);*/
     background-color: #4f4f4f;
     background-repeat: no-repeat;
     position: fixed;
@@ -459,9 +469,94 @@ label{
     justify-content: center;
 }
 .barra{
+    margin-bottom: 20px;
     width: 70%;
+    bottom: 0;
+    position: fixed;
+}
+/*----------------playlist-------------------*/
+.playlist-titulo{
+    width: 80%;
+    height:40px;
+    margin-left: 10%;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    display: inline-flex;
+    flex-direction:row ;
+    background-color: #cecaca;
+}
+.list-head{
+    width: 80%;
+    display: inline-flex;
+    flex-direction: row;
+    text-align:center;
+    margin-left: 10%;
+    border-bottom: 2px rgba(79, 79, 79, 0.1) solid;
+
+}
+.list-content{
+    width: 80%;
+    height: 70px;
+    margin-left: 10%;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: start;
+    border-bottom: 2px rgba(79, 79, 79, 0.1) solid;
+}
+.song{width:5%;} 
+.list-text{width: 55%;}
+
+.list-stars, .list-actions{
+    width:20%;
 }
 
+.list-text{
+    display: grid;
+    grid-gap: 10px;
+    grid-auto-rows: minmax(30px, auto);
+    margin-left: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.one {
+    grid-column: 1;
+    grid-row: 1;
+  }
+.two {
+    grid-column: 2;
+    grid-row: 1;
+  }
+.three {
+    grid-column: 3;
+    grid-row: 1;
+  }
+.four {
+    grid-column: 4;
+    grid-row: 1;
+}
+.five {
+    grid-column: 5;
+    grid-row: 1;
+  }
+
+
+.list-actions{
+    margin-top: auto;
+    margin-bottom: auto;
+    display: inline-flex;
+    flex-direction: row;
+}
+.song{
+    min-width: 60px;
+    min-height: 60px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
 /*----*/
 .espacio-blanco{
     height: 110px;
