--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -332,6 +332,17 @@ label{
 
 /*----------MUSICA-----------*/
 
+.cont-music {
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.name {
+    margin-top: 5px;
+}
+
 .music-sections{
     display: flex;
     flex-direction: column;
