--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -1085,12 +1085,15 @@ margin-right: auto;
 }
 
 /*----------FOOTER-----------*/
+footer{
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+}
 
 .contact{
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    height: auto;
+    height: 55px;    
     background-color: #4f4f4f;
 }
 .social-media{
