--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -42,7 +42,7 @@ a{
 }
 /*-------------index---------------*/
 .presentacion{
-    height: 466px;
+    height: 600px;
     width: 100%;
     background-color:  rgb(107, 255, 255);
     background-image: url(../images/chica.jpeg);
@@ -455,9 +455,17 @@ label{
     background-position: center;
     margin-left: auto;
     margin-right: auto;
-    /*background-image: url(../images/player.png);*/
-    background-color: #4f4f4f;
+    background-image: url(../images/player.png);
     background-repeat: no-repeat;
+    position: fixed;
+    left:0;
+    bottom: 0;
+    padding:20px 20px;
+}
+.pie{
+    height: 55px;
+    width: 100%;
+    background-color: #4f4f4f;
     position: fixed;
     left:0;
     bottom: 0;
