--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -1218,3 +1218,19 @@ margin-right: auto;
     background-image: url(../images/masCanciones.png);
     background-size: contain;
 }
+
+
+/* ARTISTA ---------------------------------- */
+
+#cont-artista {
+    background-color: rgb(218, 218, 218);
+    height: 100px;
+
+
+}
+
+#tit-artista {
+    font-size: 24px;
+    margin-left: auto;
+    margin-right: auto;
+}
