--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -346,6 +346,9 @@ label{
 .music-sections{
     display: flex;
     flex-direction: column;
+    width: 90%;
+    margin-left: auto;  
+    margin-right: auto; 
     margin-bottom: 5px;
     padding-bottom: 15px;
     border-bottom: 2px rgba(79, 79, 79, 0.1) solid;
