--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -3,6 +3,7 @@
     border: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif; 
+    /*font-weight: bold;*/
 }
 .fuerte{
     font-weight: bolder;
@@ -72,6 +73,7 @@ a{
 .btn-index{
     float: right;
     color: white;
+    font-weight: bolder;
     height: 50px;
     width: 150px;
     margin: auto;    
@@ -105,6 +107,7 @@ a{
     width: 150px;
     margin: auto;
     /*margin-top: 50px;*/
+    font-weight: bolder;
     margin-bottom: 0;
     border-radius: 10px;
 }
@@ -116,6 +119,7 @@ a{
     width: 150px;
     margin: auto;
     /*margin-top: 20px;*/
+    font-weight: bolder;
     margin-bottom: 0;
     border-radius: 10px;
 }
@@ -177,17 +181,16 @@ label{
 
 .inicio-sesion{
     background-color:#3431B4;
-    border: 2px solid black;
 }
 
 .comenzar{
-    background-color: blue;
+    background-color: #3431B4;
     display: block;
     margin: auto;
 }
 
 .tit-registro{
-    color: blue;
+    color: :#3431B4;
     text-align: center;
     width: 100%;
 }
@@ -321,6 +324,10 @@ label{
     padding: 10px ;}
 .m{ /* del menu ---links*/
     float: left;
+}
+.derecha{
+    float:right;
+    margin-left: 40%;
 }
 .margin{ /*para centrar los textos del header menu*/
     margin-top: 5px;
@@ -521,7 +528,6 @@ label{
 .cancion{
     width: 100%;
     text-align: center;
-    
 }
 .content{
     width: 100%; /* modifico ancho de 100% y le pongo*/
@@ -530,9 +536,12 @@ label{
 }
 .artista{
     width: 100%;
-    display:inline-flex;
+    display:flex;
     flex-direction: row;
     justify-content: center;
+}
+.estrellas{
+    display: inline-flex;
 }
 .barra{
     margin-bottom: 20px;
@@ -542,7 +551,7 @@ label{
 }
 
 /*----*/
-.espacio-blanco{
+.espacio-blanco,.espacio-blanco2{
     height: 110px;
     width: 100%;
 }
@@ -785,7 +794,7 @@ label{
   }
   
   input[type="radio"]:checked ~ label {
-    color: orange;
+    color:#fff;
     animation-name: example;
     animation-duration: 0.8s;
     animation-iteration-count: 1;
@@ -854,10 +863,9 @@ label{
 /* AYUDA - acordeon ----------------------------------*/
 
 #linea-buscar {
-    width: 50%;
-    margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 #linea-buscar-header {
@@ -906,7 +914,7 @@ color: #fff;
 font-size: 20px;
 cursor: pointer;
 border-bottom: 1px solid #fff;
-width: 100%;
+width: auto;
 }
 .acordeon__titulo:hover {
 background: rgba(110, 110, 110, 0.8);
@@ -926,6 +934,8 @@ margin: 15px 0;
 }
 .ayuda{
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .ayuda .tit-plan {
 margin-top: 20px;
@@ -1001,20 +1011,22 @@ margin-right: auto;
 }
 
 #lista-comentarios {
-    width: 40%;
+    width: auto;
     height: 50%;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
     margin-top: 20px;
+    border: 2px solid black;
   }
 
 .un-comentario {
+    border: 2px solid black;
     margin-top: 5px;
     padding: 5px;
     background-color: rgb(245, 240, 240);
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    width: auto;
+    float: left;
+    margin-left: 5%;
+    
 }
 
 .un-comentario-negrita {
@@ -1035,11 +1047,10 @@ margin-right: auto;
 /*----------NOTIFICACIONES-----------*/
 
 #actualizar-plan-notific {
-    display: flex;
-    flex-direction: row;
-    vertical-align: middle;
-    margin-top: 60px;
-    margin-bottom: 30px;
+    width: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: center;
 }
 
 /*----------ACTUALIZAR PLAN----------*/
@@ -1396,7 +1407,6 @@ footer{
     .artist{
         min-width: 90px;
         min-height: 90px;
-        border: 1px solid black;
         margin-left: 0.1%;
     }
 
@@ -1405,7 +1415,6 @@ footer{
         width: 100px;
         text-align: center;
         margin-bottom: 10px;
-        border: 1px solid black;
     }
 
     .songs{
@@ -1413,7 +1422,6 @@ footer{
         min-height: 30px;*/
         width: 65px;/* 90px*/
         height: 65px;
-        border: 1px solid black;
         margin-left: 0.1%;
     }
 
@@ -1469,9 +1477,10 @@ footer{
 
     .h1-artista{
         width: 90%;
-        text-align: center;
-        border: 1px solid black;
+        font-size: 24px;
+        text-align: left; /* titulos en artista*/
         margin: auto;
+        margin-top: 30px;
     }
     .acordeon{
         width: auto;
@@ -1483,9 +1492,29 @@ footer{
         flex-direction: column;
     }
 
-    .opciones-index{
+    .opciones-index,.espacio-blanco,.btn-index{
         display:none;
     }
+    .index{
+        margin-right: auto;
+        width: auto;
+    }
+    .h1-index{
+        width: 150px; 
+        margin-top: 80px;
+        margin-right: 20px;       
+        font-size: 44px;
+    }
+    .login,.registrarse{font-size: 34px;
+        font-weight: bolder; 
+        width: 250px;
+        height: 70px;
+        text-align: center;  
+        margin-top: 10px;
+    }
+    .container-links{margin-top:40px; margin-left: 70px; height: 40px;}
+    .presentacion{height: 400px;}
+
     .planes{
         margin-left: 100px;
         height: auto;
@@ -1498,6 +1527,8 @@ footer{
     }
     .image-playlist{
         background-size: cover;
+        width: 180px;
+        height: 180px;
     }
 
     #_menu{/*-------menu en mobile---------*/
@@ -1506,11 +1537,7 @@ footer{
     #menu{/*-------menu en desktop---------*/
         display: none; 
         
-    }/* ------------------------------------------------VER BUSQUEDA EN MOBILE
-    #busqueda{display:none;}
-
-
-    */
+    }
     .search{
         width: 100px;
         margin-left: 40px;/*si en mobile lo dejo en el hamburguesa-- sacarle el margen*/
@@ -1527,8 +1554,11 @@ footer{
 
  /*----------------------------*/
 @media (min-width: 719px) and (max-width: 2560px){
-    #_menu{/*-------menu en mobile---------*/
+    #_menu,.oculto{/*-------menu en mobile---------*/
         display: none;
+    }
+    .derecha{
+        margin-left: 78%;
     }
 }
     
